[gd_scene load_steps=12 format=2]

[ext_resource path="res://Sounds/magic cliffs.ogg" type="AudioStream" id=1]
[ext_resource path="res://Sprites/far-grounds.png" type="Texture" id=2]
[ext_resource path="res://Sprites/sky.png" type="Texture" id=3]
[ext_resource path="res://Node2D.gd" type="Script" id=4]
[ext_resource path="res://Sprites/clouds.png" type="Texture" id=5]
[ext_resource path="res://Fonts/Chonkly.otf" type="DynamicFontData" id=6]
[ext_resource path="res://Sounds/Safe.ogg" type="AudioStream" id=7]
[ext_resource path="res://icon2.png" type="Texture" id=8]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 209.369, 4.74908 )

[sub_resource type="DynamicFont" id=2]
size = 60
outline_size = 1
extra_spacing_char = 1
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=3]
size = 32
outline_size = 1
font_data = ExtResource( 6 )

[node name="World" type="Node2D"]
position = Vector2( 385.518, -7.12109 )
script = ExtResource( 4 )

[node name="GameOverTimer" type="Timer" parent="."]
wait_time = 6.0
one_shot = true

[node name="WallTimer" type="Timer" parent="."]
wait_time = 3.2

[node name="StartTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="ScoreTimer" type="Timer" parent="."]

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 36, -10 )
rotation = 3.14159
shape = SubResource( 1 )
one_way_collision = true
one_way_collision_margin = 5.0

[node name="Area2D2" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
position = Vector2( 36, 660 )
shape = SubResource( 1 )
one_way_collision = true
one_way_collision_margin = 5.0

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )

[node name="ParallaxBackground2" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer3" type="ParallaxLayer" parent="ParallaxBackground2"]
motion_scale = Vector2( 0.5, 0.5 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground2/ParallaxLayer3"]
position = Vector2( 401.627, 280.075 )
scale = Vector2( 15.0331, 6.83782 )
texture = ExtResource( 3 )

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground2"]
motion_scale = Vector2( 0.2, 0.2 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground2/ParallaxLayer"]
position = Vector2( 410.83, 340.072 )
scale = Vector2( 3, 3 )
texture = ExtResource( 5 )

[node name="ParallaxLayer2" type="ParallaxLayer" parent="ParallaxBackground2"]
motion_scale = Vector2( 0.1, 0.1 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground2/ParallaxLayer2"]
position = Vector2( 465.049, 536.03 )
scale = Vector2( 2.32805, 2.41658 )
texture = ExtResource( 2 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Button" type="Button" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -152.0
margin_top = -43.0
margin_right = 142.0
margin_bottom = 44.0
rect_pivot_offset = Vector2( 1.57919, 1.86834 )
custom_fonts/font = SubResource( 2 )
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="CanvasLayer"]
position = Vector2( 386, 162 )
texture = ExtResource( 8 )

[node name="Label" type="Label" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 100.133
margin_top = -287.0
margin_right = 350.133
margin_bottom = -36.9995
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 1, 1, 1, 1 )
custom_constants/line_spacing = -4
text = "Use the up and down arrow keys to keep the bird alive. "
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )
volume_db = 2.0
pitch_scale = 1.5

[connection signal="timeout" from="GameOverTimer" to="." method="_on_GameOverTimer_timeout"]
[connection signal="timeout" from="WallTimer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_Timer3_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_Timer2_timeout"]
[connection signal="pressed" from="CanvasLayer/Button" to="." method="_on_Button_pressed"]
